# FDTD

./: README.txt  TODO
McMahon/jfdtd3d_v2/: Makefile  parameters  structure.cpp
McMahon/jscience/: CHANGELOG  Makefile  README  jconsts.cpp  jconsts.h  jio.cpp  jio.h  jmaterials.cpp  jmaterials.h  jmath_basic.cpp  jmath_basic.h  jmath_geometry.cpp  jmath_geometry.h  jmath_matrix.cpp  jmath_matrix.h  jmath_mesh.cpp  jmath_mesh.h  jmath_special.cpp  jmath_special.h  jmath_vector.cpp  jmath_vector.h  jplanewave.cpp  jplanewave.h
OpenEMS/: web_ref.txt
Sullivan/: Makefile  PhysConsts.hpp  fd1d_1.3.c  fd2d_3.4.c  fd3d_4.2.c  main_1d.cpp  main_2d.cpp
Taflove/: fdtd1D.m  fdtd2D.m  fdtd3D_CPML.f90  fdtd3D_UPML.m  fdtd3D_pec.m
ToyFDTD/ToyFDTD1-v1.03/: Makefile  README  ToyFDTD1.c  ToyFDTD1.f90  changelog
ToyFDTD/ToyFDTD2-v1.0/: Makefile  README  ToyFDTD2.c  changelog  chengGbry.cmap
ToyFDTD/ToyFDTD3-v1.0/: Makefile  README  ToyBoxFDTDbezhig.c
angora-0.12.0/: AUTHORS  ChangeLog  LEGAL  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.ac  libtool  web_ref.txt
angora-0.12.0/cfg/: config_all.cfg
angora-0.12.0/doc/: Makefile  Makefile.am  Makefile.in  angora.info  angora.texi  column_major.eps  grid_origin.eps  movie_file_layout.eps  random_sample.eps
angora-0.12.0/matlab/: angora_fieldvalue.m  angora_line.m  angora_movie.m  hdf5_exists.m  hdf5_read.m
angora-0.12.0/src/: Makefile  Makefile.am  Makefile.in  angora.cpp  angora_excp.h  constants.h  float_comp.h  globals.cpp  globals.h  headers.h  material.cpp  material.h  material_id.h  path_utils.cpp  path_utils.h  time_axis.cpp  time_axis.h  timing_chart.txt
angora-0.12.0/src/absorb/: CPML.cpp  CPML.h  Cabsorb.cpp  Cabsorb.h  Makefile  Makefile.am  Makefile.in
angora-0.12.0/src/config/: Makefile  Makefile.am  Makefile.in  cfg_utils.cpp  cfg_utils.h  createcfg.cpp  valid_settings.cpp
angora-0.12.0/src/estimator/: Cestimator.cpp  Cestimator.h  Makefile  Makefile.am  Makefile.in  read_logging_data.cpp  read_logging_data.h
angora-0.12.0/src/fft/: Makefile  Makefile.am  Makefile.in  fft.h  fft_d.cpp  fft_f.cpp
angora-0.12.0/src/fft/kiss_D_fft/: Makefile  Makefile.am  Makefile.in  README  _kiss_D_fft_guts.h  kiss_D_fft.c  kiss_D_fft.h  kiss_D_fftnd.c  kiss_D_fftnd.h  kiss_D_fftndr.c  kiss_D_fftndr.h  kiss_D_fftr.c  kiss_D_fftr.h
angora-0.12.0/src/fft/kiss_F_fft/: Makefile  Makefile.am  Makefile.in  README  _kiss_F_fft_guts.h  kiss_F_fft.c  kiss_F_fft.h  kiss_F_fftnd.c  kiss_F_fftnd.h  kiss_F_fftndr.c  kiss_F_fftndr.h  kiss_F_fftr.c  kiss_F_fftr.h
angora-0.12.0/src/imaging/: Cimg.cpp  Cimg.h  Cimg_pp.cpp  Cimgs.cpp  Cimgs.h  Makefile  Makefile.am  Makefile.in  read_imaging.cpp  read_imaging.h
angora-0.12.0/src/main/: Makefile  Makefile.am  Makefile.in  init.cpp  init.h  initgeom.cpp  initgeom.h  matfile.h  parallel.cpp  parallel.h  place_obj.cpp  place_obj.h  placegeom.cpp  placegeom.h  random.h  read_basedirs.cpp  read_basedirs.h  read_geom.cpp  read_geom.h  read_global.cpp  read_global.h  read_multgridinfo.cpp  read_multgridinfo.h  update.cpp  update.h
angora-0.12.0/src/material/: Cmat_excp.h  Cmats.cpp  Cmats.h  Makefile  Makefile.am  Makefile.in  read_mat.cpp  read_mat.h
angora-0.12.0/src/nffft/: Makefile  Makefile.am  Makefile.in  read_nffft_pd.cpp  read_nffft_pd.h  read_nffft_td.cpp  read_nffft_td.h
angora-0.12.0/src/nffft/pd/: Cnffft_pd.cpp  Cnffft_pd.h  Ctr_pd.cpp  Ctr_pd.h  Ctr_pd_2l.cpp  Ctr_pd_2l.h  Ctr_pd_2l_TL.cpp  Ctr_pd_2l_pp.cpp  Ctr_pd_3l.cpp  Ctr_pd_3l.h  Ctr_pd_3l_TL.cpp  Ctr_pd_3l_pp.cpp  Ctr_pd_fs.cpp  Ctr_pd_fs.h  Ctr_pd_fs_pp.cpp  Ctr_pd_ml.cpp  Ctr_pd_ml.h  Ctr_pd_ml_TL.cpp  Ctr_pd_ml_pp.cpp  Ctr_pd_pp.cpp  Ctr_pd_upd.cpp  Makefile  Makefile.am  Makefile.in
angora-0.12.0/src/nffft/td/: Cnffft_td.cpp  Cnffft_td.h  Ctr_td.cpp  Ctr_td.h  Ctr_td_3l.cpp  Ctr_td_3l.h  Ctr_td_3l_TL.cpp  Ctr_td_3l_pp.cpp  Ctr_td_3l_upd.cpp  Ctr_td_fs.cpp  Ctr_td_fs.h  Ctr_td_fs_pp.cpp  Ctr_td_fs_upd.cpp  Makefile  Makefile.am  Makefile.in
angora-0.12.0/src/pointsources/: Cpointsources.cpp  Cpointsources.h  Makefile  Makefile.am  Makefile.in  read_pointsources.cpp  read_pointsources.h
angora-0.12.0/src/recorder/: Crec.h  Crecorder.cpp  Crecorder.h  Crecorder_fieldvalue.cpp  Crecorder_fieldvalue.h  Crecorder_line.cpp  Crecorder_line.h  Crecorder_movie.cpp  Crecorder_movie.h  Makefile  Makefile.am  Makefile.in  read_recorder.cpp  read_recorder.h
angora-0.12.0/src/shape/: Cshape.cpp  Cshape.h  Cshape_excp.h  Cshapes.cpp  Cshapes.h  Cshapes_excp.h  Makefile  Makefile.am  Makefile.in  read_shapes.cpp  read_shapes.h
angora-0.12.0/src/specfun/gamma/: Makefile  Makefile.am  Makefile.in  gamma.h
angora-0.12.0/src/specfun/hermite/: Makefile  Makefile.am  Makefile.in  hermite.cpp  hermite.h
angora-0.12.0/src/tfsf/: Cfb.cpp  Cfb.h  Cgsmb.cpp  Cgsmb.h  Chgb.cpp  Chgb.h  Ckohler.cpp  Ckohler.h  Cpw.cpp  Cpw.h  Cpw_2l.cpp  Cpw_2l.h  Cpw_2l_inc.cpp  Cpw_fs.cpp  Cpw_fs.h  Cpw_fs_inc.cpp  Cpw_fs_upd.cpp  Cpw_ml.cpp  Cpw_ml.h  Cpw_ml_inc.cpp  Cpw_ml_upd.cpp  Ctfsf.cpp  Ctfsf.h  Makefile  Makefile.am  Makefile.in  read_tfsf.cpp  read_tfsf.h
angora-0.12.0/src/tfsf/evan/: Makefile  Makefile.am  Makefile.in  f2c.h  z_div.c  zgtsv.c
angora-0.12.0/src/tfsf/glquad/: Makefile  Makefile.am  Makefile.in  gaussquad.cpp  gaussquad.h
angora-0.12.0/src/waveforms/: Cwf.h  Cwf_gauss.cpp  Cwf_gauss.h  Cwf_shared_ptr.h  Cwfs.cpp  Cwfs.h  Cwfs_excp.h  Makefile  Makefile.am  Makefile.in  read_wfs.cpp  read_wfs.h
dipmed/: Makefile  Makefile_old
dipmed/doc/: .gitignore  dipmed.bib  dipmed.tex
dipmed/input/: input.txt
dipmed/postproc/: keyboard_control.py  plot.py
dipmed/src/: IO.cpp  IO.hpp  constants.hpp  em1d.cpp  em1d.hpp  main.cpp  material.cpp  material.hpp  system.hpp
dipmed/test_codes/: alignment_boyd.py  alignment_boyd.wxmx  alignment_hookandhall.py  damped_harmonic_oscillator.py  relaxation.py  static_reponse.py  weak_field.wxmx
em1d/: Makefile
em1d_dispersion/: Makefile
em2d_scattering/: Makefile
fdtd_omp/: fdtd_omp.cpp  todo.txt
(+22 files in other folders)
